--- a/2.探索性分析.ipynb
+++ b/2.探索性分析.ipynb
@@ -79496,7 +79496,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "现象：商品数量大于 1000 的品牌有 masura(1562)、irisk(1325)、runail(1274) ，数量级明显大于其它品牌（blusky(893) 商品数量排名第四）。"
+    "现象：热销的品牌有 runail、irisk、masura、bpw.style、 grattol 等。"
    ]
   },
   {
